freest/test/prog/Invalid/Kinding/GivenTooManyArgsK/GivenTooManyArgsK.fst
module GivenTooManyArgsK where

type Foo : *T
type Foo = Int Int